Tue Mar 18 16:24:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (literal_concat_gen): bail out at different encoding.

Tue Mar 18 04:00:27 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_memsearch_ss): simple shift search.

	* re.c (rb_memsearch_qs): quick search.

	* re.c (rb_memsearch_qs_utf8): quick search for UTF-8 string.

	* re.c (rb_memsearch_qs_utf8_hash): hash functions for above.

	* re.c (rb_memsearch): use above functions.

	* string.c (rb_str_index): give enc to rb_memsearch.

	* include/ruby/intern.h (rb_memsearch): move to encoding.h.

	* include/ruby/encoding.h (rb_memsearch): move from intern.h.

	* common.mk (PREP): add dependency.

Mon Mar 17 22:23:54 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_take, rb_ary_take_while, rb_ary_drop,
	  rb_ary_drop_while): new methods. [ruby-dev:34067]

	* test/ruby/test_array.rb: add tests for above.

Mon Mar 17 17:11:13 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-mode): should use `run-mode-hooks' instead
	  of calling `run-hooks' directly to run the mode hook.  patch from
	  Chiyuan Zhang <pluskid AT gmail.com> in [ruby-core:15915]

Mon Mar 17 16:41:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: unset GREP_OPTIONS.  [ruby-core:15918]

Sun Mar 16 18:07:07 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/trans/utf_16_32.c: bug fix (some invalid UTF-8 sequences
	  were legal)

	* test/ruby/test_transcode.rb: test for above bug

Sun Mar 16 17:28:07 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (LIBRUBY_SO): add dependency to $(BUILTIN_ENCOBJS).

Sun Mar 16 08:51:41 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* include/ruby/intern.h: added some declarations.

	* include/ruby/ruby.h: ditto.

	* common.mk: added some entries.

	* configure.in: added a check for signbit.

	* lib/complex.rb: nearly all of core definitions have been removed.

	* lib/rational.rb: ditto.

	* lib/mathn.rb: some trivial adjustments.
