@@ -110,10 +110,10 @@
 #define xfree       free
 #endif
 
-#define CHECK_INTERRUPT_IN_MATCH_AT
-
 #ifdef RUBY
 
+#include "vm_core.h"
+#define CHECK_INTERRUPT_IN_MATCH_AT RUBY_VM_CHECK_INTS()
 #define onig_st_init_table                  st_init_table
 #define onig_st_init_table_with_size        st_init_table_with_size
 #define onig_st_init_numtable               st_init_numtable
@@ -155,6 +155,8 @@
 #define st_nothing_key_free            onig_st_nothing_key_free
 /* */
 #define onig_st_is_member              st_is_member
+
+#define CHECK_INTERRUPT_IN_MATCH_AT
 
 #endif
 
